--- a/lottery-interface/pom.xml
+++ b/lottery-interface/pom.xml
@@ -31,9 +31,19 @@
 			<artifactId>bcprov-jdk15</artifactId>
 			<version>1.46</version>
 		</dependency>
-
+		<dependency>
+			<groupId>yt</groupId>
+			<artifactId>vasoss-iwt-common</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>yt</groupId>
+			<artifactId>lottomagic-channel-comm-plugin</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<build>
+		<finalName>${final.name}</finalName>
 		<sourceDirectory>src</sourceDirectory>
 		<resources>
 			<resource>
@@ -61,6 +71,55 @@
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>wagon-maven-plugin</artifactId>
+				<version>1.0-beta-4</version>
+				<executions>
+					<execution>
+						<id>upload-war</id>
+						<phase>install</phase>
+						<goals>
+							<goal>upload-single</goal>
+							<!-- <goal>upload</goal> -->
+						</goals>
+						<configuration>
+							<!-- <fromDir>${basedir}/target</fromDir> -->
+							<!-- <includes>${project.build.finalName}.war</includes> -->
+							<!-- <url>ftp://52.68.232.222:48791</url> -->
+							<!-- <toDir>/home/fuming</toDir> -->
+							<!-- <serverId>awstokyo01</serverId> -->
+							<fromFile>target/${final.name}.war</fromFile>
+							<url>${ftp.to.url}</url>
+							<serverId>${ftp.server.id}</serverId>
+							<skip>false</skip>
+							<toFile>${final.name}.war</toFile>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
+		<extensions>
+			<!-- Enabling the use of FTP -->
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-ssh</artifactId>
+				<version>1.0-beta-6</version>
+			</extension>
+		</extensions>
 	</build>
+	<profiles>
+		<profile>
+			<id>yt</id>
+			<properties>
+				<runtime.env>packageConfig\yt</runtime.env>
+				<final.name>a.yt.youkala.com</final.name>
+				<ftp.server.id>a.yt.youkala.com</ftp.server.id>
+				<ftp.to.url>sftp://120.24.38.160:22/data/server/apache-tomcat-8.0.36/swapDir</ftp.to.url>
+			</properties>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+		</profile>
+	</profiles>
 </project>
