更新生产环境参数

--- a/lottery-interface/src/touch-lottomagic-channel-comm-plugin.properties
+++ b/lottery-interface/src/touch-lottomagic-channel-comm-plugin.properties
@@ -5,7 +5,7 @@ channel-id=C12001
 private-key=Private-C12001.key
 
 #积分兑换彩票URL
-point-exchange-lottery-url=http://124.205.38.84:8880/resources/api/receiveChannelOrderAction.action
+point-exchange-lottery-url=http://t.lottomagic.com.cn:11704/resources/api/receiveChannelOrderAction.action
 
 #查询修改投注账户信息
-query-modify-bet-account-info-url=http://124.205.38.84:8880/resources/api/receiveQueryBetAccountAction.action
+query-modify-bet-account-info-url=http://t.lottomagic.com.cn:11704/resources/api/receiveQueryBetAccountAction.action
