--- a/lottery-interface/src/lottomagic-channel-comm-plugin.properties
+++ b/lottery-interface/src/lottomagic-channel-comm-plugin.properties
@@ -5,7 +5,7 @@ channel-id=C11000
 private-key=Private-C11000.key
 
 #积分兑换彩票URL
-point-exchange-lottery-url=http://124.205.38.84:8480/resources/api/receiveChannelOrderAction.action
+point-exchange-lottery-url=http://www.lottomagic.com.cn/resources/api/receiveChannelOrderAction.action
 
 #查询修改投注账户信息
-query-modify-bet-account-info-url=http://124.205.38.84:8480/resources/api/receiveQueryBetAccountAction.action
+query-modify-bet-account-info-url=http://www.lottomagic.com.cn/resources/api/receiveQueryBetAccountAction.action
