--- a/lottery-interface/.project
+++ b/lottery-interface/.project
@@ -3,6 +3,7 @@
 	<name>lottery-interface</name>
 	<comment></comment>
 	<projects>
+		<project>xtone-java-common</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
