--- a/lottery-interface/pom.xml
+++ b/lottery-interface/pom.xml
@@ -36,10 +36,20 @@
 			<artifactId>vasoss-iwt-common</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>yt</groupId> -->
+<!-- 			<artifactId>lottomagic-channel-comm-plugin</artifactId> -->
+<!-- 			<version>1.0-SNAPSHOT</version> -->
+<!-- 		</dependency> -->
 		<dependency>
-			<groupId>yt</groupId>
-			<artifactId>lottomagic-channel-comm-plugin</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+			<version>1.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.xtone.common</groupId>
+			<artifactId>xtone-common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 	<build>
