--- a/lottery-interface/packageConfig/yt/config.properties
+++ b/lottery-interface/packageConfig/yt/config.properties
@@ -1,14 +1,14 @@
-local.url=jdbc\:mysql\://localhost\:3306/log_general?autoReconnect\=true&useUnicode\=true&characterEncoding\=utf-8&zeroDateTimeBehavior\=convertToNull&transformedBitIsBoolean\=true
-local.user=root
-local.password=shanks252350
+local.url=jdbc\:mysql\://112.74.83.34\:3306/log_general?autoReconnect\=true&useUnicode\=true&characterEncoding\=utf-8&zeroDateTimeBehavior\=convertToNull&transformedBitIsBoolean\=true
+local.user=ytYoukaWrite
+local.password=lnr5XaagdZXHdQ7T
 local.initialSize=5
 local.maxActive=10
 local.maxIdle=5
 local.minIdle=2
 local.maxWait=5000
-config.url=jdbc\:mysql\://localhost\:3306/config_general?autoReconnect\=true&useUnicode\=true&characterEncoding\=utf-8&zeroDateTimeBehavior\=convertToNull&transformedBitIsBoolean\=true
-config.user=root
-config.password=shanks252350
+config.url=jdbc\:mysql\://112.74.83.34\:3306/config_general?autoReconnect\=true&useUnicode\=true&characterEncoding\=utf-8&zeroDateTimeBehavior\=convertToNull&transformedBitIsBoolean\=true
+config.user=ytYoukaWrite
+config.password=lnr5XaagdZXHdQ7T
 config.initialSize=5
 config.maxActive=10
 config.maxIdle=5
