--- a/lottery-interface/pom.xml
+++ b/lottery-interface/pom.xml
@@ -58,9 +58,6 @@
 		<resources>
 			<resource>
 				<directory>src</directory>
-				<excludes>
-					<exclude>**/*.java</exclude>
-				</excludes>
 			</resource>
 		</resources>
 		<plugins>
@@ -79,6 +76,12 @@
 					<warSourceDirectory>${basedir}/WebRoot</warSourceDirectory>
 					<version>3.0</version>
 					<failOnMissingWebXml>false</failOnMissingWebXml>
+					<webResources>
+						<resource>
+							<directory>${runtime.env}</directory>
+							<targetPath>WEB-INF/classes</targetPath>
+						</resource>
+					</webResources>
 				</configuration>
 			</plugin>
 			<plugin>
