修改数据库配置

--- a/lottery-interface/packageConfig/yt/config.properties
+++ b/lottery-interface/packageConfig/yt/config.properties
@@ -1,6 +1,6 @@
-local.url=jdbc\:mysql\://112.74.83.34\:3306/log_general?autoReconnect\=true&useUnicode\=true&characterEncoding\=utf-8&zeroDateTimeBehavior\=convertToNull&transformedBitIsBoolean\=true
-local.user=ytYoukaWrite
-local.password=lnr5XaagdZXHdQ7T
+local.url=jdbc\:mysql\://10.116.12.123\:3306/yk_online_log_general?autoReconnect\=true&useUnicode\=true&characterEncoding\=utf-8&zeroDateTimeBehavior\=convertToNull&transformedBitIsBoolean\=true
+local.user=lottery_sdk
+local.password=bIKCHc4Nr5K
 local.initialSize=5
 local.maxActive=10
 local.maxIdle=5
