成功订单入库

--- a/lottery-interface/src/config.properties
+++ b/lottery-interface/src/config.properties
@@ -6,13 +6,13 @@ local.maxActive=10
 local.maxIdle=5
 local.minIdle=2
 local.maxWait=5000
-config.url=jdbc\:mysql\://localhost\:3306/config_general?autoReconnect\=true&useUnicode\=true&characterEncoding\=utf-8&zeroDateTimeBehavior\=convertToNull&transformedBitIsBoolean\=true
-config.user=root
-config.password=shanks252350
-config.initialSize=5
-config.maxActive=10
-config.maxIdle=5
-config.minIdle=2
-config.maxWait=5000
+lottery.url=jdbc\:mysql\://localhost\:3306/yk_lottery_sdk_config?autoReconnect\=true&useUnicode\=true&characterEncoding\=utf-8&zeroDateTimeBehavior\=convertToNull&transformedBitIsBoolean\=true
+lottery.user=root
+lottery.password=shanks252350
+lottery.initialSize=5
+lottery.maxActive=10
+lottery.maxIdle=5
+lottery.minIdle=2
+lottery.maxWait=5000
 
 server.id=1
