--- a/lottery-interface/pom.xml
+++ b/lottery-interface/pom.xml
@@ -32,15 +32,20 @@
 			<version>1.46</version>
 		</dependency>
 		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>19.0</version>
+		</dependency>
+		<dependency>
 			<groupId>yt</groupId>
 			<artifactId>vasoss-iwt-common</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
-<!-- 		<dependency> -->
-<!-- 			<groupId>yt</groupId> -->
-<!-- 			<artifactId>lottomagic-channel-comm-plugin</artifactId> -->
-<!-- 			<version>1.0-SNAPSHOT</version> -->
-<!-- 		</dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>yt</groupId> -->
+		<!-- <artifactId>lottomagic-channel-comm-plugin</artifactId> -->
+		<!-- <version>1.0-SNAPSHOT</version> -->
+		<!-- </dependency> -->
 		<dependency>
 			<groupId>commons-dbcp</groupId>
 			<artifactId>commons-dbcp</artifactId>
