修改数据库用户名

--- a/lottery-interface/src/config.properties
+++ b/lottery-interface/src/config.properties
@@ -1,5 +1,5 @@
 local.url=jdbc\:mysql\://localhost\:3306/log_general?autoReconnect\=true&useUnicode\=true&characterEncoding\=utf-8&zeroDateTimeBehavior\=convertToNull&transformedBitIsBoolean\=true
-local.user=root
+local.user=lottery
 local.password=shanks252350
 local.initialSize=5
 local.maxActive=10
@@ -7,7 +7,7 @@ local.maxIdle=5
 local.minIdle=2
 local.maxWait=5000
 lottery.url=jdbc\:mysql\://localhost\:3306/yk_lottery_sdk_config?autoReconnect\=true&useUnicode\=true&characterEncoding\=utf-8&zeroDateTimeBehavior\=convertToNull&transformedBitIsBoolean\=true
-lottery.user=root
+lottery.user=lottery
 lottery.password=shanks252350
 lottery.initialSize=5
 lottery.maxActive=10
