--- a/lottery-interface/packageConfig/yt/config.properties
+++ b/lottery-interface/packageConfig/yt/config.properties
@@ -6,9 +6,9 @@ local.maxActive=10
 local.maxIdle=5
 local.minIdle=2
 local.maxWait=5000
-lottery.url=jdbc\:mysql\://112.74.83.34\:3306/yk_lottery_sdk_config?autoReconnect\=true&useUnicode\=true&characterEncoding\=utf-8&zeroDateTimeBehavior\=convertToNull&transformedBitIsBoolean\=true
-lottery.user=ytYoukaWrite
-lottery.password=lnr5XaagdZXHdQ7T
+lottery.url=jdbc\:mysql\://10.116.12.123\:3306/yk_lottery_sdk_config?autoReconnect\=true&useUnicode\=true&characterEncoding\=utf-8&zeroDateTimeBehavior\=convertToNull&transformedBitIsBoolean\=true
+lottery.user=lottery_sdk
+lottery.password=bIKCHc4Nr5K
 lottery.initialSize=5
 lottery.maxActive=10
 lottery.maxIdle=5
