--- a/lottery-interface/.classpath
+++ b/lottery-interface/.classpath
@@ -18,5 +18,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="libs/Ipp.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
