--- a/lottery-interface/.settings/org.eclipse.core.resources.prefs
+++ b/lottery-interface/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
 eclipse.preferences.version=1
+encoding//WebRoot/js/zs.css=UTF-8
+encoding//WebRoot/selectNumber.jsp=UTF-8
 encoding/<project>=UTF-8
 encoding/src=UTF-8
