--- a/lottery-interface/.project
+++ b/lottery-interface/.project
@@ -4,6 +4,7 @@
 	<comment></comment>
 	<projects>
 		<project>xtone-java-common</project>
+		<project>zhihuifu-pay</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
