有卡彩票+支付demo

--- a/lottery-interface/.settings/org.eclipse.core.resources.prefs
+++ b/lottery-interface/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//WebRoot/js-css/ssq_global.css=UTF-8
 encoding//WebRoot/selectNumber.jsp=UTF-8
 encoding/<project>=UTF-8
 encoding/src=UTF-8
